Working file browser

--- a/tlm.kv
+++ b/tlm.kv
@@ -1,4 +1,9 @@
 <TLM>:
+    path: _top_bar.path
+    button_open: _top_bar.button_open
+    button_save: _top_bar.button_save
+    button_render: _top_bar.button_render
+
     BoxLayout:
         canvas.before:
             Color:
@@ -30,15 +35,20 @@
                         anchor_x: 'left'
                         size_hint_x: None
                         width: 500
-                        Selector:
-                            id: _selector
-                    FloatLayout:
+                        Basic:
+                            id: _basic
+                    RelativeLayout:
                         canvas.before:
                             Color:
                                 rgb: 0,0,0
                             Rectangle:
                                 size: self.size
-                                pos: self.pos
+                                pos: 0,0
+                        Image:
+                            pos: 0,0
+                            size: self.size
+                            allow_stretch: True
+                            source: 'tlm_logo.png'
                 AnchorLayout:
                     anchor_y: 'bottom'
                     anchor_x: 'left'
@@ -53,3 +63,27 @@
                 width: 500
                 Configuration:
                     id: _configuration
+
+<OpenDialog>:
+
+    button_cancel: _button_cancel
+    button_load: _button_load
+    filebrowser: _filebrowser
+
+
+    BoxLayout:
+        size: root.size
+        pos: root.pos
+        orientation: "vertical"
+        FileBrowser:
+            id: _filebrowser
+            dirselect: True
+        BoxLayout:
+            size_hint_y: None
+            height: 50
+            Button:
+                id: _button_cancel
+                text: "Cancel"
+            Button:
+                id: _button_load
+                text: "Load"
