--- a/ui/curveeditor.kv
+++ b/ui/curveeditor.kv
@@ -1,8 +1,8 @@
 <CurveEditor@BoxLayout>:
-    BoxLayout:
-        canvas.before:
-            Color:
-                rgb: 0.2, 0.2, 0.2
-            Line:
-                rectangle: self.pos[0], self.pos[1], self.width, self.height
-                width: 2
+    orientation: 'horizontal'
+    canvas.before:
+        Color:
+            rgb: 0.2, 0.2, 0.2
+        Line:
+            rectangle: self.pos[0], self.pos[1], self.width, self.height
+            width: 2
