--- a/tlm.kv
+++ b/tlm.kv
@@ -48,7 +48,7 @@
                             pos: 0,0
                             size: self.size
                             allow_stretch: True
-                            source: 'tlm_logo.png'
+                            source: 'img/tlm_logo.png'
                 AnchorLayout:
                     anchor_y: 'bottom'
                     anchor_x: 'left'
