--- a/ui/viewer.kv
+++ b/ui/viewer.kv
@@ -2,13 +2,13 @@
 
 <Controls>:
     
-    button_begin: _button_begin
-    button_back: _button_back
-    button_reverse: _button_reverse
-    button_pause: _button_pause
-    button_play: _button_play
-    button_forward: _button_forward
-    button_end: _button_end
+    begin:   _begin
+    back:    _back
+    reverse: _reverse
+    pause:   _pause
+    play:    _play
+    forward: _forward
+    end:     _end
 
     orientation: 'horizontal'
     height: 100
@@ -18,7 +18,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_begin
+            id: _begin
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -29,7 +29,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_back
+            id: _back
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -40,7 +40,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_reverse
+            id: _reverse
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -51,7 +51,7 @@
         size: 80, root.height
         size_hint: None, None
         Button:
-            id: _button_pause
+            id: _pause
             size: 50,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -62,7 +62,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_play
+            id: _play
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -73,7 +73,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_forward
+            id: _forward
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
@@ -84,7 +84,7 @@
         size: 79, root.height
         size_hint: None, None
         Button:
-            id: _button_end
+            id: _end
             size: 49,60
             size_hint: None, None
             border: [0,0,0,0]
