Fixed a few things, links to buttons and other ui elements repaired

--- a/tlm.kv
+++ b/tlm.kv
@@ -20,6 +20,17 @@
     ui_height:   _parameters.ui_height
     ui_original: _parameters.ui_original
 
+    ## Viewer ui elements
+    ui_screen:  _viewer.ui_screen
+    ui_slider:  _viewer.ui_slider
+    ui_begin:   _viewer.ui_begin
+    ui_back:    _viewer.ui_back
+    ui_reverse: _viewer.ui_reverse
+    ui_pause:   _viewer.ui_pause
+    ui_play:    _viewer.ui_play
+    ui_forward: _viewer.ui_forward
+    ui_end:     _viewer.ui_end
+
     BoxLayout:
         canvas.before:
             Color:
